@@ -36,6 +36,15 @@
 <div class="document">
 
 
+<p>2011-11-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/profile.c (AppendImageProfile): Don't leak profile buffer
+while appending a chunk to an existing profile.  Resolves
+SourceForge patch 3294496 &quot;Fix a memory leak in
+profile.c(AppendImageProfile)&quot;.</li>
+</ul>
+</blockquote>
 <p>2011-11-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
